<resources>
    <string name="shared_user_id">net.basov.omn</string>
    <string name="shared_user_label">Open Markdown Notes Software (debug)</string>
    <string name="app_name">Open Markdown Notes (legacy mode)</string>
    <string name="anvil_file" translatable="false">anvil.html</string>
    <string name="create_file" translatable="false">create.html</string>
    <string name="html_top"><![CDATA["<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Transitional//EN\" \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd\">
<html xmlns=\"http://www.w3.org/1999/xhtml\">

<head>

  <title>%2$s</title>

  <link rel=\"stylesheet\" type=\"text/css\" href=\"../%3$scss/highlight.css\" />
  <link rel=\"stylesheet\" href=\"https://fonts.googleapis.com/icon?family=Material+Icons\" />
  <link rel=\"stylesheet\" href=\"../%3$sfonts/google-material/material-icons.css\"  />
  <link rel=\"stylesheet\" type=\"text/css\" href=\"../%3$scss/common.css\" />
  <link rel=\"stylesheet\" type=\"text/css\" href=\"../%3$scss/custom.css\" />

  <script type="text/javascript" src="../%3$sjs/functions.js"></script>

  <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\" />
  <meta http-equiv=\"content-type\" content=\"text/html; charset=UTF-8\" />
%4$s
  <script>
    var PackageName = \'%1$s\';
    var PageName = \'%5$s\';
    var Title = \'%6$s\';
  </script>

</head>

<body style=\"height:100%%; width:100%%; margin:0\">

  <div id=\"ptitle\" style=\"overflow:hidden; background-color:lightgray; position:fixed; width:100%%\">
    <div id=\"hidable_header\" style=\"display:none; background-color:lightgray; width:100%%; padding-top:0.5em; padding-left:0.5em\" >
      <div id=\"actions_header\">
      </div>
      Name:<span>%5$s</span>%7$s
    </div>

    <a
      onclick=\"toggleHdrBtnVis();\">
      <h4 id=\"pageTitle\" align=\"center\" style=\"margin-top:0.4em; margin-bottom:0.5em;\">
        %6$s
        <span id=\"title_arrow\" style=\"border: 1px solid black; border-radius: 6px; padding: 0.1em\">
&nbsp;+&nbsp;
        </span>
      </h4>
    </a>
  </div>

  <div id=\"content\" style=\"padding:0.5em; padding-top:1.5em; overflow:auto;\">

    "]]></string>
    <string name="html_action_button_header"><![CDATA["
    <button
      id=\"btnEdit\"
      class=\"hBtn\"
      onclick=\"Android.editButtonCallback(PageName)\">
&#x270e;
    </button>
    <button
      id=\"btnHome\"
      class=\"hBtn\"
      onclick=\"Android.homeButtonCallback()\">
&#x1f3e0;
    </button>
    <button
      id=\"btnDebug\"
      class=\"hBtn\"
      onclick=\"Android.debugButtonCallback()\">
&#x33d2
    </button>
    <button
      id=\"btnAdd\"
      class=\"hBtn\"
      onclick=\"Android.newPageButtonCallback()\">
&#x2795;
    </button>
    <button
      id=\"btnLink\"
      class=\"hBtn\"
      onclick=\"Android.linkButtonCallback(PageName, Title)\">
&#x1f517;
    </button>
    <button
      id=\"btnEMail\"
      class=\"hBtn\"
      onclick=\"Android.emailButtonCallback(PageName, Title)\">
&#x2709;
    </button>
    <button
      id=\"btnSend\"
      class=\"hBtn\"
      onclick=\"Android.sendButtonCallback(PageName, Title)\">
&#x2197;
    </button>
    <button
      id=\"btnFolder\"
      class=\"hBtn\"
      onclick=\"Android.folderButtonCallback(PageName)\">
&#x1f4c2;
    </button>
    <button
      id=\"btnRefresh\"
      class=\"hBtn\"
      onclick=\"Android.refreshHtmlButtonCallback()\">
&#8634;      
    </button>
    <button
      id=\"btnShortcut\"
      class=\"hBtn\"
      onclick=\"Android.shortcutButtonCallback(PageName, Title)\">
&#x2197;
    </button>
    <button
      id=\"btnQuickNotes\"
      class=\"hBtn\"
      onclick=\"Android.quicknoteButtonCallback()\">
&#x1f3c3;
    </button>
    <button
      id=\"btnSettings\"
      class=\"hBtn\"
      onclick=\"Android.prefButtonCallback()\">
&#x1f527;
    </button>
    <br />
"]]></string>
    <string name="html_meta_template"><![CDATA["  <meta name=\"%1$s\" content=\"%2$s\" />
"]]></string>
    <string name="html_tags_template"><![CDATA["
    <div id=\"tags\" style=\"margin-top:5px;\">
%1$s    </div>
"]]></string>
    <string name="html_one_tag_template"><![CDATA["      <a href=\"%2$s\" class=\"taglink\"><span class=\"tagmark\">%1$s</span></a>
"]]></string>
    <string name="html_buttom"><![CDATA["
  </div>
  
  <a href=\"/default/Help.html#header-issue\"><i class=\"material-icons wa\">error</i></a>

</body>

</html>
    "]]></string>
    <string name="md_tag_file_template"><![CDATA["Title: Tags



<div id=\"tagcloud\" style=\"margin-top: 1em\"></div>
<div id=\"main\" style=\"margin-top: 1em;\"></div>

<script>
// Start of Tags DB
var pageDb = %1$s
// End of Tags DB
</script>

<script>

var prev ='';
function visit(ref) {
  window.location.href='#'+ref;
  document.getElementById(ref).classList.add('tagmarkselected');
  if (prev.length != 0 && ref !== prev)
    document.getElementById(prev).classList.remove('tagmarkselected');
  prev = ref;
}

var tagDb = {};
for ( i in pageDb ) {
  for ( j in pageDb[i]['tags'] ){
    var ctag = pageDb[i]['tags'][j];
    if (!tagDb.hasOwnProperty(ctag))
      tagDb[ctag] = [];
    tagDb[ctag].push(i.trim());
  }
}

function sortObject(obj) {
  return Object.keys(obj).sort().reduce(function (result, key) {
    result[key] = obj[key];
    return result;
  }, {});
}

var tagCloud = '';
var tagsList = '';
for ( t in sortObject(tagDb) ) {

  tid = encodeURIComponent(
    t.replace(/ /g, '-')
     .replace(/#/g, '')
     .replace(/</g, '')
     .replace(/>/g, '')
     .replace(/\\//g,'')
  );

  tagCloud += '<span class=\"tagmark\" onclick=\"visit(\\''
    + tid
    + '\\');\">'
    + t.replace(/ /g, '&nbsp;')
    + '</span>\\n';

  tagsList += '<a href=\"#tagcloud\" class=\"taglink\">'
    + '<span id=\"'
    + tid
    + '\" class=\"tagmark\">'
    + t
    + '</span></a><br />\\n'
    + '<ul>\\n';
  for ( p in tagDb[t] ) {
    pn = tagDb[t][p];
    tagsList += '<li><a href=\"'
      + pn
      + '.html\">'
      + pageDb[pn]['title']
      + '</a></li>\\n';
  }
  tagsList += '</ul>';
}

document.getElementById('tagcloud').innerHTML = tagCloud;
document.getElementById('main').innerHTML = tagsList;

var selected = window.location.href.split('#')[1];
if (typeof selected != 'undefined') {
  document.getElementById(selected).classList.add('tagmarkselected');
  prev = selected;
}

</script>
"]]></string>
    <string name="set_html_page_js">
        javascript:
        var OMNPKG=\'%1$s\';
        var PFN=\'%2$s\';
        document.getElementById(\'actions_header\').innerHTML=\'%3$s\';
        document.getElementById(\'title_arrow\').style.display=\'inline\';

        function enableButton(id, enable) {
            if (enable)
                document.getElementById(id).style.display=\'inline\';
            else
                document.getElementById(id).style.display=\'none\';
        };

        enableButton(\'btnHome\', %4$b);
        enableButton(\'btnDebug\', %5$b);
        enableButton(\'btnAdd\', %6$b);
        enableButton(\'btnLink\', %7$b);
        enableButton(\'btnEMail\', %8$b);
        enableButton(\'btnFolder\', %9$b);
        enableButton(\'btnRefresh\', %10$b);
        enableButton(\'btnShortcut\', %11$b);
        enableButton(\'btnQuickNotes\', %12$b);
        enableButton(\'btnSend\', %13$b);
        setBodyTop();
    </string>
    <string name="set_md_page_js_create">
        javascript:
        var OMNPKG=\'%1$s\';
        var PFN=\'%2$s\';
        document.getElementById(\'pname\').innerHTML=\'%2$s\';
    </string>
    <string name="set_md_page_js">
        javascript:
        var OMNPKG=\'%1$s\';
        var PFN=\'%2$s\';
        var Title = \'%3$s\';
        run_marked(\'%4$s\', \'%5$b\');
    </string>
    <string name="pelican_header"><![CDATA["Title: %1$s
Date: %2$s
Modified: %3$s
Author: %4$s
Tags: %5$s

"]]>
    </string>
    <string name="no_pelican_header"><![CDATA["#### %1$s

"]]>
    </string>
    <string name="template_page_build"><![CDATA["#### %11$s

<a name=\"%2$s-%3$s\" />

* [%1$s](#%2$s-%3$s)

##### Platform information #####
* Manufacturer: %2$s
* Device: %4$s
* Model (and Product): %1$s (%3$s)
* OS API Level: %5$d
* Android version: %6$s
* Build.DISPLAY: %7$s%8$s
* Screen w\\*h [x\\*y dpi]: %9$s
* User Agent: \"%10$s\"

##### Application information #####
* %11$s
* Data directory: %12$s

- - -

This page generated automatically.

**To get actual build information delete and recreate this file.**

"]]></string>
    <string name="template_page_start"><![CDATA["**This page generated automatically. Edit this as you wish.**

* [Quick notes](QuickNotes.html)
* [Tags](Tags.html)
* [Incoming pages](incoming/Incoming.html)
* [Incoming bookmarks](bookmarks/Incoming.html)
* [Help](default/Help.html)
* [Changelog](default/Changelog.html)
* [Welcome!](default/Welcome.html)
* [Build information](default/Build.html)

"]]></string>
    <string name="template_page_quick_notes"><![CDATA["
- - -

<link rel=\"stylesheet\" type=\"text/css\" href=\"../css/PSearch.css\" />
<script type=\"text/javascript\" src=\"../js/PSearch.js\"></script>
"]]></string>
    <string name="template_quick_note"><![CDATA["- - -
##### %1$s

%2$s

"]]></string>
    <string name="template_url_bookmark"><![CDATA["<script>bookmarks = [

  {
    \"date\": \"%1$s\",%2$s
    \"url\": \"%3$s\",
    \"title\": \"%4$s\",
    \"tags\": [
%5$s    ],
    \"notes\": [
%6$s    ]
  },
"]]></string>
    <string name="pk_version_code" translatable="false">appVersionCode</string>
    <string name="pk_pref_version" translatable="false">prefVersion</string>
    <string name="pk_pref_changed" translatable="false">prefChanged</string>
    <string name="pk_enable_pelican_meta" translatable="false">enablePelicanMeta</string>
    <string name="pk_enable_js_debug" translatable="false">enableJSDebug</string>
    <string name="pk_enable_js_local_storage" translatable="false">enableJSLocalStorage</string>
    <string name="pk_enable_js_web_db" translatable="false">enableJSWebDb</string>
    <string name="pk_use_view_directory" translatable="false">prefViewDirectory</string>
    <string name="pk_notes_author" translatable="false">notesAuthor</string>
    <string name="pk_enable_code_highlight" translatable="false">enableCodeHighlight</string>
    <string name="pk_enable_intent_uri" translatable="false">enableIntentURI</string>
    <string name="pk_enable_termux_intent_uri" translatable="false">enableTermuxIntentURI</string>
    <string name="pk_btn_enable_home" translatable="false">btnEnableHome</string>
    <string name="pk_btn_enable_add_page" translatable="false">btnEnableAddPage</string>
    <string name="pk_btn_enable_link" translatable="false">btnEnableLink</string>
    <string name="pk_btn_enable_email" translatable="false">btnEnableEmail</string>
    <string name="pk_btn_enable_filemanager" translatable="false">btnEnableFilemanager</string>
    <string name="pk_btn_enable_refresh_html" translatable="false">btnRefreshHtml</string>
    <string name="pk_btn_enable_shortcut" translatable="false">btnEnableShortcut</string>
    <string name="pk_btn_enable_quicknotes" translatable="false">btnEnableQuicknotes</string>
    <string name="pk_btn_enable_send" translatable="false">btnEnableSend</string>
</resources>