<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory
        android:title="General"
        android:key="pref_general">
        <EditTextPreference
            android:key="@string/pk_notes_author"
            android:singleLine="true"
            android:title="Notes author" />
        <CheckBoxPreference
            android:title="Use VIEW_DIRECTORY"
            android:summary="Yes for X-plore or ES, no for OI File Managers"
            android:defaultValue="false"
            android:key="@string/pk_use_view_directory" />
        <CheckBoxPreference
            android:title="Enable code highlight"
            android:defaultValue="true"
            android:key="@string/pk_enable_code_highlight" />
        <CheckBoxPreference
            android:title="Enable Pelican CMS meta"
            android:summary="at page creation time"
            android:defaultValue="true"
            android:key="@string/pk_enable_pelican_meta" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Actions buttons show/hide"
        android:key="pref_key_storage_settings">
        <CheckBoxPreference
            android:title="Home"
            android:defaultValue="true"
            android:key="@string/pk_btn_enable_home" />
        <CheckBoxPreference
            android:title="Add new page"
            android:defaultValue="true"
            android:key="@string/pk_btn_enable_add_page" />
        <CheckBoxPreference
            android:title="Link to clipboard"
            android:defaultValue="true"
            android:key="@string/pk_btn_enable_link" />
        <CheckBoxPreference
            android:title="Send by E-Mail"
            android:defaultValue="true"
            android:key="@string/pk_btn_enable_email" />
        <CheckBoxPreference
            android:title="Open file manager"
            android:defaultValue="true"
            android:key="@string/pk_btn_enable_filemanager" />
        <CheckBoxPreference
            android:title="Refresh HTML"
            android:defaultValue="false"
            android:key="@string/pk_btn_enable_refresh_html" />
        <CheckBoxPreference
            android:title="Create shortcut on home screen"
            android:defaultValue="true"
            android:key="@string/pk_btn_enable_shortcut" />
        <CheckBoxPreference
            android:title="Quick Notes"
            android:defaultValue="true"
            android:key="@string/pk_btn_enable_quicknotes" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="JavaScript options"
        android:key="pref_general">
        <CheckBoxPreference
            android:title="Enable JS debug"
            android:defaultValue="false"
            android:key="@string/pk_enable_js_debug" />
        <CheckBoxPreference
            android:title="Enable JS localStorage"
            android:summary="WARNING: Experimental!!!"
            android:defaultValue="false"
            android:key="@string/pk_enable_js_local_storage" />
        <CheckBoxPreference
            android:title="Enable JS openDatabase"
            android:summary="WARNING: Experimental !!!"
            android:defaultValue="false"
            android:key="@string/pk_enable_js_web_db" />
        <CheckBoxPreference
            android:title="Enable Intent URI"
            android:summary="WARNING: Experimental !!! Dangerous but powerful."
            android:defaultValue="false"
            android:key="@string/pk_enable_intent_uri" />
        <CheckBoxPreference
            android:title="Enable Termux Intent URI"
            android:summary="Require [Enable Intent URI]. WARNING: Experimental !!! Dangerous but powerful."
            android:defaultValue="false"
            android:key="@string/pk_enable_termux_intent_uri" />
    </PreferenceCategory>

</PreferenceScreen>
